--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Nix
+result
+
 # CMake ignores
 CMakeLists.txt.user
 CMakeCache.txt
@@ -12,7 +15,7 @@ CTestTestfile.cmake
 _deps
 
 # Development outputs
-build
+build/
 .ccls-cache
 
 # Prerequisites
